@@ -12,10 +12,11 @@ endif
 
 SUBDIRS += utils tests xsl schemas
 
-dist_pkgdata_DATA = dist/fedora/scap-fedora12-oval.xml \
-                    dist/fedora/scap-fedora13-oval.xml \
+dist_pkgdata_DATA = dist/fedora/scap-fedora13-oval.xml \
                     dist/fedora/scap-fedora14-oval.xml \
-                    dist/fedora/scap-fedora14-xccdf.xml
+                    dist/fedora/scap-fedora14-xccdf.xml \
+                    dist/rhel6/scap-rhel6-oval.xml \
+                    dist/rhel6/scap-rhel6-xccdf.xml
 
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = libopenscap.pc
@@ -29,10 +30,12 @@ EXTRA_DIST =	dist/rhel5/openscap.spec \
 		dist/fedora/openscap.spec \
 		dist/fedora/oscap-scan.sys \
 		dist/fedora/oscap-scan.init \
-		dist/fedora/scap-fedora12-oval.xml \
 		dist/fedora/scap-fedora13-oval.xml \
 		dist/fedora/scap-fedora14-oval.xml \
 		dist/fedora/scap-fedora14-xccdf.xml \
+		dist/rhel6/scap-rhel6-oval.xml \
+		dist/rhel6/scap-rhel6-xccdf.xml \
+		dist/rhel6/openscap.spec \
 		dist/bash_completion.d/oscap \
 		docs/Doxyfile \
 		docs/title.doc \
