@@ -1,3 +1,8 @@
+openscap-0.7.2							13-04-2011
+- OVAL 5.7 is supported
+- "--skip-valid" option in oscap tool
+- bugfixes
+
 openscap-0.7.1							08-03-2011
 - improve library selfcheck mechanism
 - substitution support in XCCDF
